# test-game

./: .gitattributes  .gitignore  .t.swp  CMakeLists.txt  Dockerfile  README.md  compile.sh  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/App/: CMakeLists.txt  main.cpp
src/Framework/: CMakeLists.txt
src/Framework/Logs/: Logs.cpp
src/Framework/Time/: DateTime.cpp
src/Framework/include/: Bitmask.hpp  Component.hpp  DateTime.hpp  EventHandler.hpp  Game.hpp  KeyboardInput.hpp  Logs.hpp  MouseInput.hpp  Prefixes.hpp  Scene.hpp  SceneStateMachine.hpp  Setup.hpp  Window.hpp  WindowResolution.hpp
src/Framework/include/Input/: KeyboardInput.hpp
src/Framework/include/Scene/: Scene.hpp
src/Framework/src/: Bitmask.cpp  DateTime.cpp  EventHandler.cpp  KeyboardInput.cpp  Logs.cpp  MouseInput.cpp  Prefixes.cpp  SceneStateMachine.cpp  Setup.cpp  Window.cpp  WindowResolution.cpp
src/GUI/: CMakeLists.txt
src/GUI/include/: GuiLayout.hpp  GuiLayoutHorizontal.hpp  GuiLayoutVertical.hpp  GuiManager.hpp  GuiObject.hpp  GuiTextWidget.hpp  GuiWidget.hpp  MenuWidget.hpp
src/GUI/include/Widgets/: Button_Exit.hpp  Button_LoadGame.hpp  Button_NewGame.hpp  Button_Options.hpp  SampleWidget.hpp
src/GUI/src/: GuiLayout.cpp  GuiLayoutHorizontal.cpp  GuiLayoutVertical.cpp  GuiManager.cpp  GuiObject.cpp  GuiTextWidget.cpp  GuiWidget.cpp  MenuWidget.cpp
src/GUI/src/Widgets/: Button_Exit.cpp  Button_LoadGame.cpp  Button_NewGame.cpp  Button_Options.cpp  (+1 more)
src/Game/: CMakeLists.txt
src/Game/include/: Game.hpp  Input.hpp  KeyboardInput.hpp  MouseInput.hpp  Object.hpp  Window.hpp
src/Game/src/: Game.cpp  Input.cpp  KeyboardInput.cpp  Object.cpp  Window.cpp
src/Logs/: Logs.cpp  Logs.hpp
src/Time/: DateTime.cpp  DateTime.hpp
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  conanfile.py  engine_pch.hpp
src/core/Animation/: Animation.cpp  Animation.hpp
src/core/Components/: C_Animation.cpp  C_Animation.hpp  C_Collidable.hpp  C_Collider.cpp  C_Collider.hpp  C_ColliderBox.hpp  C_Direction.cpp  C_Direction.hpp  C_Drawable.hpp  C_KeyboardMovement.cpp  C_KeyboardMovement.hpp  C_MovementAnimation.cpp  C_MovementAnimation.hpp  C_ProjectileAttackAnimation.cpp  C_ProjectileAttackAnimation.hpp  C_ProjectileGenerator.cpp  C_ProjectileGenerator.hpp  C_RemoveObjectOnCollisionEnter.cpp  C_Sprite.cpp  C_Sprite.hpp  C_Transform.cpp  C_Velocity.cpp  C_Velocity.hpp  Component.hpp
src/core/Containers/: MapOperations.hpp
src/core/Debug/: ConsoleLog.cpp  ConsoleLog.hpp  Debug.cpp  Debug.hpp  FileLog.cpp  FileLog.hpp  LogFileManager.cpp  LogFileManager.hpp
src/core/Design-Patterns/: CMakeLists.txt  Singleton.hpp
src/core/Events/: EventHandler.cpp  EventHandler.hpp
src/core/Filesystem/: AssetsStorage.cpp  AssetsStorage.hpp  AssetsStructure.hpp  CMakeLists.txt  File.cpp  File.hpp  FileInfo.cpp  FileInfo.hpp  FileOperations.hpp  FileStorage.cpp  FileStorage.hpp  FileSystem.hpp  FileSystemManager.cpp  FileSystemManager.hpp  PakFile.cpp  PakFile.hpp  PakFileSystem.cpp  PakFileSystem.hpp  conanfile.py
src/core/Input/: KeyboardInput.cpp  KeyboardInput.hpp  MouseInput.cpp  MouseInput.hpp
src/core/Level/: MapRenderer.cpp  MapRenderer.hpp  Quadtree.hpp  TiledMapParser.cpp  TiledMapParser.hpp
src/core/Objects/: Asset.hpp  CollidableObjects.cpp  CollidableObjects.hpp  DrawableObjects.cpp  DrawableObjects.hpp  Object.cpp  Object.hpp  ObjectCollection.cpp  ObjectCollection.hpp
src/core/Projectiles/: Projectile.hpp  ProjectileArrow.cpp  ProjectileArrow.hpp  ProjectileStorage.cpp  ProjectileStorage.hpp
src/core/Scene/: Scene.hpp  SceneStateMachine.hpp
src/core/Threads/: ThreadPool.cpp  ThreadPool.hpp  ThreadTask.cpp  ThreadTask.hpp  ThreadWorker.cpp
src/core/Utility/: Bitmask.cpp  Bitmask.hpp  FpsCounter.cpp  FpsCounter.hpp  Timer.hpp
src/core/Window/: Window.cpp  Window.hpp  WindowResolution.cpp  WindowResolution.hpp
src/core/include/: Animation.hpp  AssetsManager.hpp  CollidableObjects.hpp  DrawableObjects.hpp  FileManager.hpp  GameRenderer.hpp  JsonHandler.hpp  LayerLevel.hpp  Log.hpp  LogFileManager.hpp  MapRenderer.hpp  Object.hpp  ObjectCollection.hpp  TiledMapParser.hpp
src/core/src/: Animation.cpp  AssetsManager.cpp  CollidableObjects.cpp  DrawableObjects.cpp  EventHandler.cpp  GameRenderer.cpp  JsonHandler.cpp  KeyboardInput.cpp  LogFileManager.cpp  MapRenderer.cpp  MouseInput.cpp  Object.cpp  ObjectCollection.cpp  Quadtree.cpp  SceneStateMachine.cpp  TiledMapParser.cpp  Window.cpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp  SceneGame.cpp  SceneGame.hpp  SceneLoading.cpp  SceneLoading.hpp  SceneMenu.cpp  SceneMenu.hpp  conanfile.py
src/game/include/: C_Sprite.hpp  Game.hpp  SceneGame.hpp  SceneMenu.hpp
src/game/src/: C_Animation.cpp  C_KeyboardMovement.cpp  C_Sprite.cpp  C_Transform.cpp  C_Velocity.cpp  Game.cpp  SceneGame.cpp  SceneLoading.cpp  SceneMenu.cpp
src/gui/: CMakeLists.txt  GuiImage.cpp  GuiImage.hpp  GuiLayout.cpp  GuiLayout.hpp  GuiLayoutHorizontal.cpp  GuiLayoutHorizontal.hpp  GuiLayoutTable.cpp  GuiLayoutTable.hpp  GuiLayoutVertical.cpp  GuiLayoutVertical.hpp  GuiManager.cpp  GuiManager.hpp  GuiObject.hpp  GuiTextWidget.cpp  GuiTextWidget.hpp  conanfile.py
src/gui/include/: GuiAlign.hpp  GuiImage.hpp  GuiLayout.hpp  GuiLayoutHorizontal.hpp  GuiLayoutTable.hpp  GuiLayoutVertical.hpp  GuiMargin.hpp  GuiObject.hpp  GuiTextWidget.hpp
src/gui/src/: GuiImage.cpp  GuiLayout.cpp  GuiLayoutHorizontal.cpp  GuiLayoutTable.cpp  GuiLayoutVertical.cpp  GuiManager.cpp  GuiObject.cpp  GuiTextWidget.cpp
src/pak-compiler/: CMakeLists.txt  main.cpp
test/core/: CMakeLists.txt  conanfile.txt
test/core/src/: BitmaskTest.cpp  main.cpp  test.cpp
tools/onyx_file_compressor/: CMakeLists.txt  build-linux.py  build.py  conanfile.txt
tools/onyx_file_compressor/include/: AssetsContainer.hpp  AssetsJsonDescriptor.hpp  Compressor.hpp  Directory.hpp  Library.hpp  Log.hpp  Timer.hpp
tools/onyx_file_compressor/src/: AssetsContainer.cpp  AssetsJsonDescriptor.cpp  Compressor.cpp  Cpp_Lib.cpp  FileCompressorLib.cpp  OnyxFileCompressor.cpp  Py_Lib.cpp  Timer.cpp
(+849 files in other folders)
